# ai_engineering_henrik_sjogren_de24

./: .gitignore  README.md  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
04_pydantic/: pydantic.ipynb  validation_without_pydantic.ipynb
05_pydantic_gemini/: b_gemini_pydantic_more_robust.ipynb
06_fastapi_crud/: api.py  data_processing.py  try_my_api.ipynb
10_rag/: explorations.ipynb
video_alongs/04_pydantic/: person.json  pydantic_basics_2.ipynb  pydantic_basiscs.ipynb
video_alongs/05_pydantic_gemini/: cheaper_houses.csv  gemini_pydantic.ipynb  gemini_pydantic_robust_output.ipynb  library.json
video_alongs/06_fastapi_crud/: api.py  data_processing.py
video_alongs/06_fastapi_crud/data/: library.json
video_alongs/07_pydanticai_fundamentals/: a_pydanticai_pydantic_model.ipynb  cv.duckdb
video_alongs/07_pydanticai_fundamentals/b_pydanticai_fastapi/: movies_api.py  setup_db.py  utils.py
video_alongs/07_pydanticai_fundamentals/b_pydanticai_fastapi/data/: movies.duckdb
video_alongs/08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
video_alongs/09_lancedb_vector_database/: lancedb_basics.ipynb
video_alongs/10_pydanticai_rags/: explorations.ipynb  ingestion.py  pdfs_to_text.py
video_alongs/10_pydanticai_rags/backend/: data_models.py  rag.py
video_alongs/10_pydanticai_rags/frontend/: app.py
